[package]
name = "rust-learn"
version = "0.1.0"
edition = "2018"
license-file = "LICENSE"
description = "learning rust"
homepage = "https://jasonkayzk.github.io/"
readme = "README.md"
repository = "https://github.com/JasonkayZK/rust-learn/"
authors = ["Jasonkay jasonkayzk@gmail.com"]

[dependencies]
mdns-sd = { version = "0.11.1" }
env_logger = { version = "0.11.3" }
